--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
+# IntelliJ project files
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
+bin/
+gen/
+local.properties
+
+# AndroidStudio
+build/
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+
+# Eclipse project files
+.project
+.settings/
+.classpath
+
+# OS gen
 .DS_Store
-/build
-/captures
+Thumbs.db
+
+# Temp files
+*.bak
+*.tmp
+*.temp
+*.vpp~*
+*.*~
+~*.*
