--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jjklogano.zufengfm" >
+          package="com.jjklogano.zufengfm"
+        >
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".ZhuFengApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+            android:name=".ZhuFengApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            >
 
         <!-- 应用程序日入口点！！！禁止改动！！！ -->
 
         <activity
-            android:name=".SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+                android:name=".SplashActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+                >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+                android:name=".MainActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+                >
         </activity>
-        <activity android:name=".WelcomeActivity" >
+        <activity android:name=".WelcomeActivity">
         </activity>
-        <activity android:name=".AlbumDetailActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+                android:name=".AlbumDetailActivity"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                >
         </activity>
+
+        <service
+                android:name=".MusicService"
+                android:exported="false"
+                >
+        </service>
     </application>
 
 </manifest>
