--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
+    //数字签名
+    signingConfigs {
+        //配置名称
+        JJKLoGano_Release {
+            keyAlias 'JJKLoGano_Release'
+            keyPassword '159753'
+            storeFile file('D:/CodeRepository/GitRepository/ZuFengFM/release.keystore')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "com.jjklogano.zufengfm"
         minSdkVersion 14
@@ -15,12 +24,22 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.JJKLoGano_Release
+        }
+    }
+    productFlavors {
+        BaiduFlavor {
+            minSdkVersion 14
+            applicationId 'com.jjklogano.zufengfm.baidu'
+            targetSdkVersion 23
+            versionCode 1
+            versionName '1.0'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
